--- a/src/app/users/components/users-list/users-list.component.html
+++ b/src/app/users/components/users-list/users-list.component.html
@@ -9,13 +9,15 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let user of users; let even = even"
-          [ngStyle]="{'background-color': even? '#00ee00' : '#33eeee'}">
-      <td>{{user.name}} {{user.surname}}</td>
+    <tr *ngFor="let user of users; let even = even;let index = index"
+        (click)="selectRow(index)" [ngClass]="index === selectedRow? 'selected' : '' ">
+<!--          [ngStyle]="{'background-color': even? '#00ee00' : '#33eeee'}"-->
+
+      <td><a [routerLink]="['/user-details',user.id]">{{user.name}} {{user.surname}}</a></td>
       <th>{{user.position}}</th>
       <th>{{user.department}}</th>
       <th>{{user.kudos}}</th>
       <th><button type="button" class="btn btn-success">Doceń!</button></th>
     </tr>
   </tbody>
-</table>>
+</table>
